dnl                                               -*- Autoconf -*-
dnl Process this file with autoconf to produce a configure script.
dnl
AC_REVISION([configure.ac,v 0.9.2.43 2005/07/04 20:07:24 brian Exp])
AC_PREREQ(2.59)
AC_INIT([OpenHeNB],[0.1a],[lib.aca55a@gmail.com])

AC_CONFIG_SRCDIR([src/modules/sth.c])
AC_CONFIG_HEADERS([config.h include/sys/streams/config.h])
