#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(OpenHeNB, 0.1a, lib.aca55a@gmail.com)

AC_CONFIG_SRCDIR([include/sys/config.h.in])
AC_CONFIG_HEADERS([config.h include/sys/config.h])

AC_CONFIG_AUX_DIR([scripts])
AC_CONFIG_MACRO_DIR([m4])

AC_CANONICAL_TARGET

# Checks for programs.
#AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_ARG_VAR([LD], [Linker loader command])
AC_PATH_PROG(CSCOPE, cscope, /bin/true)
AC_PATH_PROG(CSCOPE_INDEXER, cscope-indexer, /bin/true)
  
# Checks for libraries.
lfs_save_LIBS="$LIBS"
AC_CHECK_LIB([c], [open])
# AC_CHECK_LIB([pthread], [pthread_create])
LIBS="$lfs_save_LIBS"

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_STDC
AC_HEADER_MAJOR
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h inttypes.h langinfo.h libintl.h limits.h locale.h malloc.h memory.h netinet/in.h stddef.h stdint.h stdio_ext.h stdlib.h string.h strings.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h syslog.h unistd.h values.h types.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_C_CONST
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
dnl AC_STRUCT_ST_BLOCKS
dnl AC_CHECK_MEMBERS([struct stat.st_rdev])
dnl AC_HEADER_TIME
dnl AC_STRUCT_TM
dnl AC_C_VOLATILE
dnl AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
dnl AC_FUNC_VPRINTF
dnl AC_CHECK_FUNCS([alarm bzero gettimeofday inet_ntoa localtime_r mempcpy memset munmap nl_langinfo select setlocale stpcpy strcasecmp strchr strcspn strdup strerror strrchr strstr strtol strtoul])

AC_MSG_NOTICE([Checking for MODEM and its requirements.])

AC_MODEM

LT_INIT
AM_INIT_AUTOMAKE

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/libfapi/Makefile
		 ])
                 dnl cwmp/Makefile
AC_OUTPUT
