
SUBDIRS = libfapi
#drivers
#modules


##
## Rules for building kernel objects
##
KERNEL_OBJECTS			= 
KERNEL_MODULES			= 
KERNEL_PRELOADS			=
KERNEL_MODCONF			= $(STRCONF_CONFMOD)
KERNEL_SUBDIR			= $(PACKAGE_LCNAME)
KMODCONF_EXT			= $(PACKAGE_LCNAME)
KERNEL_MODMAPS			=

#FIXME:  include ${top_srcdir}/am/kernel.am